# fast-diary

./: .env.example  .gitignore  Cargo.toml  README.md  gui.drawio  rustfmt.toml
resources/i18n/de-DE/: builtin.ftl
resources/i18n/en-US/: builtin.ftl
resources/i18n/fr-CA/: builtin.ftl
resources/i18n/tr-TR/: builtin.ftl
src/: main.rs
src/config/: app_config.rs
src/modal/: app_data.rs  app_state.rs  app_state_utils.rs  diary_datetime.rs  mod.rs  selector.rs
src/modal/state/: app_pages.rs  current_diary.rs  diary_list_item.rs  mod.rs
src/utils/: consts.rs  diary.rs  get_image.rs  macros.rs  mod.rs
src/view/: main_window.rs  mod.rs
src/view/page/diary/: diary_page.rs  mod.rs
src/view/page/diary/widgets/: build_diary_list_item.rs  diary_editor.rs  diary_list_item.rs  mod.rs
src/view/page/diary/widgets/btn_create_widget/: btn_create_controller.rs  build_ui.rs  mod.rs
src/view/page/main/: main_page.rs  mod.rs
src/view/page/settings/: mod.rs  settings_page.rs
src/view/pages/: mod.rs
src/view/pages/diary/: mod.rs
src/view/pages/main/: mod.rs
src/view/pages/settings/: mod.rs
src/view/widget/: mod.rs
src/view/widget/diary_list/: mod.rs
src/view/widget/optional/: mod.rs
src/view/window/main/: main_window.rs  main_window_controller.rs  main_window_controller_utils.rs  mod.rs
tests/: static_str.rs
