[package]
name = "fast-diary"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"

druid = { version = "0.8", features = [
  "im",
  "image",
  "png",
  "jpeg",
  "webp",
  "usvg",
] }

druid-widget-nursery = { version = "0.1.0", features = [
  "async",
  "derive",
  "druid-material-icons",
  "druid-widget-nursery-derive",
  "flume",
  "futures",
  "hot-reload",
  "libloading",
  "material-icons",
  "notify",
  "rand",
  "notify5",
  "tokio",
] }

dotenvy = "0.15"
env_logger = "0.11.6"
log = "0.4"
im = "15.1.0"

notify = { version = "8.0.0", optional = true }

tokio = { version = "1.44.2", features = [
  "default",
  "rt",
  "time",
  "macros",
  "rt-multi-thread",
] }
futures = { version = "0.3.31", optional = true }
flume = { version = "0.11.1", optional = true }

notify5 = { version = "8.0.0", optional = true, package = "notify" }
libloading = { version = "0.8.6", optional = true }
rand = { version = "0.9.0", optional = true }
tracing = { version = "0.1.41" }
druid-material-icons = { version = "0.2.0", optional = true }
chrono = { version = "0.4.39", features = ["alloc"] }

homedir = "0.3.4"
parking_lot = "0.12.3"
